--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="logo">
         <a href="./index.html">
-            <img class="image-logo" src="/static/images/new_logo.png">
+            <img class="image-logo" src="/static/images/zeng_logo.png">
             &nbsp;曾记
         </a>
     </div>
