替换标题 为曾记

--- a/application/admin/view/video_hot/index.html
+++ b/application/admin/view/video_hot/index.html
@@ -4,8 +4,8 @@
 <script src="__LAYUI__/jq.js"></script>
 <div class="x-nav">
           <span class="layui-breadcrumb">
-              <a><cite>新热门管理</cite></a>
-              <a><cite>新热门列表</cite></a>
+              <a><cite>曾记管理</cite></a>
+              <a><cite>曾记列表</cite></a>
           </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"
        onclick="location.reload()" title="刷新">
