添加默认的配置项目标题

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -5,7 +5,7 @@
     <div class="logo">
         <a href="./index.html">
             <img class="image-logo" src="/static/images/zeng_logo.png">
-            &nbsp;曾记
+            &nbsp;{$CONFIG_TITLE}
         </a>
     </div>
     <div class="left_open">
