--- a/application/admin/view/common/head.html
+++ b/application/admin/view/common/head.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm">
 <head>
     <meta charset="UTF-8">
-    <title>曾记管理后台</title>
+    <title>{$CONFIG_TITLE}管理后台</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <!--    <meta name="referrer" content="never">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
