--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -2,7 +2,7 @@
 <html  class="x-admin-sm">
 <head>
 	<meta charset="UTF-8">
-	<title>曾记管理后台登陆</title>
+	<title>{$CONFIG_TITLE}管理后台登陆</title>
 	<meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -21,7 +21,7 @@
 <body class="login-bg">
     
     <div class="login layui-anim layui-anim-up">
-        <div class="message">曾记管理后台登陆</div>
+        <div class="message">{$CONFIG_TITLE}管理后台登陆</div>
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
